fix pop api
