# api.yaml
@@ -460,11 +460,6 @@ paths:
           required: true
           schema:
             $ref: '#/definitions/PoP'
-        - in: formData
-          name: file
-          description: Package in a multipart form
-          required: true
-          type: file
       responses:
         '200':
           description: PoP registration OK
